# sanic_base_app

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: alembic.ini  cli.py  config.py  middlewares.py  permissions.py  serializers.py  server.py  utils.py
app/migrations/: env.py
app/migrations/versions/: 65edfb10281f_init.py
app/models/: __init__.py  base.py  bill.py  users.py
app/views/: __init__.py  auth.py  payment.py  users.py
dumps/: clean.sql  user_dump.sql
tests/: conftest.py  factories.py  test_api.py  test_auth.py  test_unit.py  utils.py
